# src/main/java/org/payouth/apiserver/model/User.java
@@ -1,33 +1,18 @@
 package org.payouth.apiserver.model;
 
-import java.net.URI;
-import java.util.Objects;
-
 import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBAttribute;
 import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBHashKey;
 import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBTable;
 import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonValue;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
+import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.NoArgsConstructor;
-import org.payouth.apiserver.model.Gender;
-import org.payouth.apiserver.model.UserLocation;
-import org.openapitools.jackson.nullable.JsonNullable;
-import java.io.Serializable;
-import java.time.OffsetDateTime;
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import io.swagger.v3.oas.annotations.media.Schema;
 
-
-import java.util.*;
 import javax.annotation.Generated;
+import javax.validation.Valid;
+import java.io.Serializable;
+import java.util.Objects;
 
 /**
  * User
@@ -37,10 +22,12 @@ import javax.annotation.Generated;
 @Builder
 @NoArgsConstructor
 @AllArgsConstructor
-@DynamoDBTable(tableName = "user")
+@DynamoDBTable(tableName = "user_data")
 public class User implements Serializable {
 
   private static final long serialVersionUID = 1L;
+  @DynamoDBHashKey
+  private String email;
   @DynamoDBAttribute
   private String firstName;
   @DynamoDBAttribute
@@ -51,16 +38,8 @@ public class User implements Serializable {
   private String dateOfBirth;
   @DynamoDBAttribute
   private String race;
-  @DynamoDBHashKey
-  private String email;
   @DynamoDBAttribute
-  private UserLocation location;
-
-  @Valid
-  @DynamoDBAttribute
-  private List<String> completedStages = new ArrayList<>();
-
-
+  private String county;
 
   public User firstName(String firstName) {
     this.firstName = firstName;
@@ -70,8 +49,8 @@ public class User implements Serializable {
   /**
    * Get firstName
    * @return firstName
-  */
-  
+   */
+
   @Schema(name = "firstName", example = "John", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
   @JsonProperty("firstName")
   public String getFirstName() {
@@ -90,8 +69,8 @@ public class User implements Serializable {
   /**
    * Get lastName
    * @return lastName
-  */
-  
+   */
+
   @Schema(name = "lastName", example = "James", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
   @JsonProperty("lastName")
   public String getLastName() {
@@ -110,8 +89,8 @@ public class User implements Serializable {
   /**
    * Get gender
    * @return gender
-  */
-  @Valid 
+   */
+  @Valid
   @Schema(name = "gender", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
   @JsonProperty("gender")
   public Gender getGender() {
@@ -130,8 +109,8 @@ public class User implements Serializable {
   /**
    * Get dateOfBirth
    * @return dateOfBirth
-  */
-  
+   */
+
   @Schema(name = "dateOfBirth", example = "01/01/1990", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
   @JsonProperty("dateOfBirth")
   public String getDateOfBirth() {
@@ -150,8 +129,8 @@ public class User implements Serializable {
   /**
    * Get race
    * @return race
-  */
-  
+   */
+
   @Schema(name = "race", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
   @JsonProperty("race")
   public String getRace() {
@@ -170,8 +149,8 @@ public class User implements Serializable {
   /**
    * Get email
    * @return email
-  */
-  
+   */
+
   @Schema(name = "email", example = "john@email.com", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
   @JsonProperty("email")
   public String getEmail() {
@@ -182,52 +161,24 @@ public class User implements Serializable {
     this.email = email;
   }
 
-  public User location(UserLocation location) {
-    this.location = location;
+  public User county(String county) {
+    this.county = county;
     return this;
   }
 
   /**
-   * Get location
-   * @return location
-  */
-  @Valid 
-  @Schema(name = "location", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("location")
-  public UserLocation getLocation() {
-    return location;
+   * Get county
+   * @return county
+   */
+
+  @Schema(name = "county", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("county")
+  public String getCounty() {
+    return county;
   }
 
-  public void setLocation(UserLocation location) {
-    this.location = location;
-  }
-
-  public User completedStages(List<String> completedStages) {
-    this.completedStages = completedStages;
-    return this;
-  }
-
-  public User addCompletedStagesItem(String completedStagesItem) {
-    if (this.completedStages == null) {
-      this.completedStages = new ArrayList<>();
-    }
-    this.completedStages.add(completedStagesItem);
-    return this;
-  }
-
-  /**
-   * Get completedStages
-   * @return completedStages
-  */
-  
-  @Schema(name = "completedStages", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
-  @JsonProperty("completedStages")
-  public List<String> getCompletedStages() {
-    return completedStages;
-  }
-
-  public void setCompletedStages(List<String> completedStages) {
-    this.completedStages = completedStages;
+  public void setCounty(String county) {
+    this.county = county;
   }
 
   @Override
@@ -239,20 +190,18 @@ public class User implements Serializable {
       return false;
     }
     User user = (User) o;
-    return Objects.equals(this.email, user.email) &&
-        Objects.equals(this.firstName, user.firstName) &&
-        Objects.equals(this.lastName, user.lastName) &&
-        Objects.equals(this.gender, user.gender) &&
-        Objects.equals(this.dateOfBirth, user.dateOfBirth) &&
-        Objects.equals(this.race, user.race) &&
-        Objects.equals(this.email, user.email) &&
-        Objects.equals(this.location, user.location) &&
-        Objects.equals(this.completedStages, user.completedStages);
+    return Objects.equals(this.firstName, user.firstName) &&
+            Objects.equals(this.lastName, user.lastName) &&
+            Objects.equals(this.gender, user.gender) &&
+            Objects.equals(this.dateOfBirth, user.dateOfBirth) &&
+            Objects.equals(this.race, user.race) &&
+            Objects.equals(this.email, user.email) &&
+            Objects.equals(this.county, user.county);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(firstName, lastName, gender, dateOfBirth, race, email, location, completedStages);
+    return Objects.hash(firstName, lastName, gender, dateOfBirth, race, email, county);
   }
 
   @Override
@@ -265,8 +214,7 @@ public class User implements Serializable {
     sb.append("    dateOfBirth: ").append(toIndentedString(dateOfBirth)).append("\n");
     sb.append("    race: ").append(toIndentedString(race)).append("\n");
     sb.append("    email: ").append(toIndentedString(email)).append("\n");
-    sb.append("    location: ").append(toIndentedString(location)).append("\n");
-    sb.append("    completedStages: ").append(toIndentedString(completedStages)).append("\n");
+    sb.append("    county: ").append(toIndentedString(county)).append("\n");
     sb.append("}");
     return sb.toString();
   }
